--- a/index.html
+++ b/index.html
@@ -15,16 +15,99 @@
                     <span>ODIN</span>
                 </header>
                 <footer class="credit">
-                    <span>Photo by Halie West on Unsplash</span>
+                    <span
+                        >Photo by
+                        <a href="https://unsplash.com/@haliewestphoto"
+                            >Halie West</a
+                        >
+                        on <a href="https://unsplash.com/">Unsplash</a></span
+                    >
                 </footer>
             </div>
             <div class="forms-container">
-                <form action="">
+                <section class="hero-section">
+                    <p>
+                        This is not a real online service! You know you need
+                        something like this in your life to help you realize
+                        your deepest dreams.
+                    </p>
+                    <p>Sign up <em>now</em> to get started.</p>
+                    <p>You <em>know</em> you want to.</p>
+                </section>
+                <section class="form-section">
+                    <form action="">
+                        <div class="input-container">
+                            <p>Let's do this!</p>
+                            <div>
+                                <label for="first-name">FIRST NAME</label>
+                                <input
+                                    type="text"
+                                    name="first-name"
+                                    id="first-name"
+                                    required
+                                />
+                            </div>
+                            <div>
+                                <label for="last-name">LAST NAME</label>
+                                <input
+                                    type="text"
+                                    name="last-name"
+                                    id="last-name"
+                                    required
+                                />
+                            </div>
+                            <div>
+                                <label for="email">EMAIL</label>
+                                <input
+                                    type="email"
+                                    name="email"
+                                    id="email"
+                                    required
+                                />
+                            </div>
+                            <div>
+                                <label for="phone-number">PHONE NUMBER</label>
+                                <input
+                                    type="tel"
+                                    name="phone-number"
+                                    id="phone-number"
+                                    pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                                    placeholder="123-456-789"
+                                    required
+                                />
+                            </div>
+                            <div>
+                                <label for="password">PASSWORD</label>
+                                <input
+                                    type="password"
+                                    name="password"
+                                    id="password"
+                                    required
+                                />
+                            </div>
+                            <div>
+                                <label for="c-password">CONFIRM PASSWORD</label>
+                                <input
+                                    type="password"
+                                    name="c-password"
+                                    id="c-password"
+                                    required
+                                />
+                            </div>
+                        </div>
+                    </form>
+                </section>
+                <section class="login-section">
                     <div>
-                        <label for="name">Name</label>
-                        <input type="text" name="name" id="name" />
+                        <button class="btn-create">Create Account</button>
                     </div>
-                </form>
+                    <div>
+                        <p class="login-account">
+                            Already have an account?
+                            <a href="" class="login">Log in</a>
+                        </p>
+                    </div>
+                </section>
             </div>
         </div>
     </body>
